<resources>
    <string name="app_name" translatable="false">Linked Words</string>

    <string name="linked_words_notif_channel_descr">This notification channel helps with Bubbles API.\n(I just hope it works on every Android 10+ phone)</string>

    <string name="copy">Copy</string>
    <string name="speak">Speak</string>
    <string name="google" translatable="false">Google</string>
    <string name="wikipedia" translatable="false">Wikipedia</string>
    <string name="urban_dictionary" translatable="false">Urban Dictionary</string>

    <string name="advance">Advanced</string>
    <string name="search">Search</string>
    <string name="examples">Examples</string>
    <string name="help">Help</string>
    <string name="licenses">Licenses</string>
    <string name="settings">Settings</string>
    <string name="about">About Me</string>

    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="dont_show_again">Don\'t show again</string>

    <string name="filter_settings">Filter Settings</string>
    <string name="max_words">Max Words</string>
    <string name="show_ads">Show Ads</string>
    <string name="show_dialog">Show Definition Dialog</string>
    <string name="show_definition_popup">Show Definition List Popup</string>
    <string name="show_floating">Show Bubbles/floating dialog when text is shared to the app</string>
    <string name="show_floating_dialog">Force show floating dialog</string>
    <string name="app_theme">App Theme</string>
    <string name="theme_auto">Follow Device Mode</string>
    <string name="theme_dark">Always Dark</string>
    <string name="theme_light">Always Light</string>
    <string name="btn_tts_settings">TTS Settings</string>

    <string name="reverse_related">Reverse/Related</string>
    <string name="reverse">Reverse</string>
    <string name="sounds_like">Sounds Like</string>
    <string name="spelled_like">Spelled Like</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="triggers">Triggers</string>
    <string name="part_of">Is Part of</string>
    <string name="comprises">Comprises of</string>
    <string name="homophones">Homophones</string>
    <string name="rhymes">Rhymes</string>
    <string name="words">Words</string>
    <string name="defs">Definitions</string>
    <string name="contains">Contains</string>

    <string name="tts_first_time_message">Apparently Google always messes up their APIs by deprecating them or adding more "security",
    that\'s why on some devices (or custom ROMs) Text-to-Speech doesn\'t work.\n\n
    So that\'s why I added this settings to fix that issue.</string>

    <string name="tts_settings">Text-to-Speech Settings</string>
    <string name="reset_tts">Reset TTS Settings</string>

    <string name="tts_not_initialized">Text-to-Speech is not initialized…</string>
    <string name="tts_act_not_found">Text-to-Speech check activity not found.\nSkipping TTS check…</string>
    <string name="tts_data_not_found">Text-to-Speech voice data not found!\nDo you want to open settings to install voice data?</string>

    <string name="save_tts">Save TTS Settings</string>
    <string name="play_tts">Play example</string>
    <string name="set_pitch">Set Pitch</string>
    <string name="set_speech_rate">Set Speech Rate</string>
    <string name="select_language">Select Language</string>
    <string name="select_engine">Select TTS Engine</string>
    <string name="select_voice_model">Select Voice Model</string>

    <string name="remove_recent">Remove recent search</string>
    <string name="confirm_remove">Are you sure to remove \"%s\" from recent searches?</string>
    <string name="select_a_option_first">Select at least 1 option then press OK.</string>

    <string name="select_filters">Select the filters</string>
    <string name="select_filter_first">Select a filter first.</string>

    <string name="options">More Options</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="scroll_to_bottom">Scroll to Bottom</string>
    <string name="filter">Filter</string>

    <string name="_credits">Licenses &amp; Credits</string>
    <string name="copied_clipboard">Copied to clipboard.</string>
    <string name="error_copying_clipboard">Error copying to clipboard!</string>

    <string name="finding_help">Finding a word by its definition</string>
    <string name="related_help">Finding related words</string>
    <string name="answers_help">Finding answers</string>
    <string name="spelled_help">Wildcards [Spelled Like]</string>
    <string name="wildcard_link_help">Wildcard Help</string>

    <string name="single_char_help">here %c matches any single character.</string>
    <string name="number_char_help">here %c matches any number of characters.</string>
    <string name="consonant_char_help">here %c matches any English consonant.</string>
    <string name="phrase_help">find phrases with stone word in it.</string>

    <string name="reverse_help">find related words, phrases, answers by a word or by meaning</string>
    <string name="sounds_like_help">find words which sound similar to given word</string>
    <string name="wildcards_help">find words which are spelled like defined word with wildcards</string>
    <string name="synonym_help">find synonyms of given word (similar to Reverse function, but more category specific)</string>
    <string name="antonym_help">find antonyms of give word</string>
    <string name="triggers_help">find words which suit the given word or are associated with the word in paragraph or text</string>
    <string name="is_part_of_help">find words which are part of or are meronyms of given word</string>
    <string name="comprises_of_help">find words which is/are part(s) or component(s) of given word</string>
    <string name="rhymes_help">find words which perfectly rhyme with given word</string>
    <string name="homophones_help">find words which sound exactly alike</string>

    <string name="no_definition_found">No definition found…</string>
</resources>
