<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mSearch" android:title="@string/search" android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|always"
        android:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:title="@string/refresh" android:id="@+id/mRefresh" android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/examples" android:id="@+id/mExamples" android:icon="@drawable/ic_examples"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/help" android:id="@+id/mHelp" android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/licenses" android:id="@+id/mLicenses" android:icon="@drawable/ic_licenses"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/about" android:id="@+id/mAbout" android:icon="@drawable/ic_about"
        app:showAsAction="ifRoom"/>
</menu>