<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_marginTop="@dimen/search_view_margin_text" android:layout_marginBottom="@dimen/search_view_margin_text"
    android:orientation="vertical">

    <android.support.v7.widget.DialogTitle android:id="@+id/alertTitle"
        style="?android:attr/windowTitleStyle" android:layout_height="wrap_content"
        android:ellipsize="end" android:singleLine="true" android:layout_width="match_parent"
        android:layout_marginStart="@dimen/search_view_margin_text" android:layout_marginLeft="@dimen/search_view_margin_text"/>

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <RadioGroup android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" android:layout_marginStart="@dimen/toolbarSize"
            android:layout_marginEnd="@dimen/toolbarSize" android:layout_marginTop="10dp">
            <RadioButton android:id="@+id/rbSynonym" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:text="@string/synonyms" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="6dp" />

            <RadioButton android:id="@+id/rbAntonym" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:text="@string/antonyms" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="6dp" />

            <RadioButton android:id="@+id/rbTrigger" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:text="@string/triggers" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="6dp" />

            <RadioButton android:id="@+id/rbPartOf" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:text="@string/part_of" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="6dp" />

            <RadioButton android:id="@+id/rbComprise" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:text="@string/comprises" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="6dp" />

            <RadioButton android:id="@+id/rbRhymes" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:text="@string/rhymes" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="6dp" />

            <RadioButton android:id="@+id/rbHomophones" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:text="@string/homophones" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="6dp" />
        </RadioGroup>
    </ScrollView>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" style="?attr/buttonBarStyle">
        <android.support.v7.widget.ButtonBarLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="bottom|end"
            android:orientation="horizontal" android:paddingLeft="8dp" android:paddingRight="8dp"
            android:paddingTop="4dp">
            <Button android:id="@+id/btnOK" style="?attr/buttonBarPositiveButtonStyle"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/ok"/>
            <Button android:id="@+id/btnCancel" style="?attr/buttonBarNegativeButtonStyle"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>
</LinearLayout>