<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/search_view_margin_text"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:paddingLeft="@dimen/filter_margin_start"
    android:paddingRight="@dimen/filter_margin_start">

    <awais.backworddictionary.custom.AlertDialogTitle
        android:id="@+id/alertTitle"
        style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_view_margin_text"
        android:layout_marginLeft="@dimen/search_view_margin_text"
        android:layout_marginBottom="@dimen/search_view_margin_text"
        android:ellipsize="end"
        android:singleLine="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_height"
                android:layout_marginEnd="@dimen/search_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:focusedByDefault="false"
                    android:gravity="center_vertical"
                    android:text="@string/max_words"
                    android:textAppearance="?android:textAppearanceSmall"
                    app:useMaterialThemeColors="true"
                    tools:ignore="UnusedAttribute" />

                <awais.sephiroth.numberpicker.HorizontalNumberPicker
                    android:id="@+id/horizontalNumberPicker"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <awais.backworddictionary.custom.MaterialCheckedTextView
                android:id="@+id/showAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/filter_spacing"
                android:checkMark="?android:listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/search_height"
                android:paddingLeft="@dimen/search_height"
                android:paddingTop="@dimen/filter_margin_start"
                android:paddingEnd="@dimen/search_height"
                android:paddingRight="@dimen/search_height"
                android:paddingBottom="@dimen/filter_margin_start"
                android:text="@string/show_ads"
                android:textAppearance="?android:textAppearanceSmall"
                app:useMaterialThemeColors="true" />

            <awais.backworddictionary.custom.MaterialCheckedTextView
                android:id="@+id/showFloating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/filter_spacing"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/search_height"
                android:paddingLeft="@dimen/search_height"
                android:paddingTop="@dimen/filter_margin_start"
                android:paddingEnd="@dimen/search_height"
                android:paddingRight="@dimen/search_height"
                android:paddingBottom="@dimen/filter_margin_start"
                android:text="@string/show_floating"
                android:textAppearance="?android:textAppearanceSmall"
                app:useMaterialThemeColors="true" />

            <awais.backworddictionary.custom.MaterialCheckedTextView
                android:id="@+id/showWordDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/filter_spacing"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/search_height"
                android:paddingLeft="@dimen/search_height"
                android:paddingTop="@dimen/filter_margin_start"
                android:paddingEnd="@dimen/search_height"
                android:paddingRight="@dimen/search_height"
                android:paddingBottom="@dimen/filter_margin_start"
                android:text="@string/show_dialog"
                android:textAppearance="?android:textAppearanceSmall"
                app:useMaterialThemeColors="true" />

            <awais.backworddictionary.custom.MaterialCheckedTextView
                android:id="@+id/showDefsPopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/filter_spacing"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/search_height"
                android:paddingLeft="@dimen/search_height"
                android:paddingTop="@dimen/filter_margin_start"
                android:paddingEnd="@dimen/search_height"
                android:paddingRight="@dimen/search_height"
                android:paddingBottom="@dimen/filter_margin_start"
                android:text="@string/show_definition_popup"
                android:textAppearance="?android:textAppearanceSmall"
                app:useMaterialThemeColors="true" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_height"
                android:layout_marginTop="@dimen/filter_margin_start"
                android:layout_marginEnd="@dimen/search_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/filter_margin_start"
                    android:layout_marginRight="@dimen/filter_margin_start"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:focusedByDefault="false"
                    android:text="@string/app_theme"
                    android:textAppearance="?android:textAppearanceSmall"
                    tools:ignore="UnusedAttribute" />

                <RadioGroup
                    android:id="@+id/rgAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbThemeAuto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_auto"
                        app:useMaterialThemeColors="true" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbThemeDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_dark"
                        app:useMaterialThemeColors="true" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbThemeLight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_light"
                        app:useMaterialThemeColors="true" />
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_height"
                android:layout_marginTop="@dimen/filter_margin_start"
                android:layout_marginEnd="@dimen/search_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:focusedByDefault="false"
                    android:text="@string/tts_settings"
                    tools:ignore="UnusedAttribute" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTTS"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1.16"
                    android:text="@string/btn_tts_settings"
                    android:textColor="?colorAccent" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOK"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/ok"
                android:textColor="@color/buttons_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/cancel"
                android:textColor="@color/buttons_color" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>